...
                floatingActionButton = {
                    Toolbox(
                        onRemove = { showConfirmation.value = true },
                        onEdit = viewModel::editContent,
                    )
                },
                modifier = Modifier.testTag("ShowQrCode.Scaffold")
            ) { innerPaddings ->
                BoxWithConstraints(modifier = Modifier.padding(innerPaddings)) {
                    PageContent(
                        isPortrait = maxWidth < maxHeight,
                        qrCode = state.qrCode,
                        text = content.string(),
                        eccAction = ReactiveAction(
                            data = state.ecc,
                            onDataChanged = viewModel::onEccChanged,
                        ),
                        fullScreenAction = fullScreenAction,
                    )
...
                    .clickable(
                        onClickLabel = clickLabel,
                        indication = null,
                        interactionSource = MutableInteractionSource(),
                        onClick = { fullScreenAction.toggle() }
                    )
                    .testTag("ShowQrCode.FullScreenQrCode")
            ) {
                Box(contentAlignment = Alignment.Center) {
                    QrCodeCanvas(
                        qrCode = qrCode,
                        useMargin = true,
                    )
...
        FloatingActionButton(
            onClick = onClick,
            shape = CircleShape,
        ) {
            Icon(
                imageVector = Icons.Default.Edit,
                contentDescription = "Edit Content",
            )
        }
    }

    @Composable
    fun RemoveContentButton(onClick: () -> Unit) {
...
            containerColor = MaterialTheme.colorScheme.errorContainer,
            contentColor = Color.White,
            shape = CircleShape,
        ) {
            Icon(
                imageVector = Icons.Default.Delete,
                contentDescription = "Remove Content",
            )
        }
    }

    @Composable
    fun ToolBoxButton(expand: ReactiveAction<Boolean>) {
...
                        imageVector = Icons.Default.ArrowDownward,
                        contentDescription = "Collapse the Toolbox",
                    )
                else
                    Icon(
                        imageVector = Icons.Default.Settings,
                        contentDescription = "Expand the Toolbox",
                    )
            }
        }
    }

    @Composable
    fun RemoveConfirmationBottomSheet(
        showAction: ReactiveAction<Boolean>,
        title: String,
        removeContent: () -> Unit,
    ) {
        Confirmation.Module(
            showAction,
            title = "Remove Content",
            body = "Are you sure you want to remove \"$title\"?",
            actions = arrayOf(
                ActionType(
                    label = "Remove",
                    called = removeContent,
                    colors = Confirmation.ButtonColors(
                        container = MaterialTheme.colorScheme.errorContainer,
                        text = MaterialTheme.colorScheme.onErrorContainer,
                    )
                )
...
        eccAction: ReactiveAction<ErrorCorrectionCodeLevel>,
        fullScreenAction: ReactiveAction<Boolean>,
    ) {
        LazyColumn(
            contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier.testTag("ShowQrCode.PortraitContent")
        ) {
            item {
                QrCodeCanvas(
                    qrCode = qrCode,
                    modifier = Modifier
                        .fillMaxWidth()
                        .onQrCodeExpandClick(fullScreenAction)
                )
            }
            item {
                ErrorCorrectionLabel()
                ErrorCorrection.Module(eccAction = eccAction)
            }
            item {
                Text(
                    text = qrCodeText,
                    modifier = Modifier.testTag("QR-Code.Text")
                )
            }
        }
    }

    private fun Modifier.onQrCodeExpandClick(fullScreenAction: ReactiveAction<Boolean>) =
...
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis,
                    color = MaterialTheme.colorScheme.onPrimaryContainer,
                )
            },
            colors = TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.primaryContainer),
            modifier = Modifier.testTag("ShowQrCode.PageAppBar")
        )
    }

    @Composable
    fun QrCodeCanvas(qrCode: QrCode, modifier: Modifier = Modifier, useMargin: Boolean = false) {
        val onBackgroundColor = MaterialTheme.colorScheme.onBackground
        val margin = if (useMargin) LocalDensity.current.run { 16.dp.toPx() } else 0f
        Canvas(
            modifier = modifier
                .aspectRatio(1f)
                .semantics { contentDescription = "QR-Code" },
            onDraw = {
                drawRect(color = Color.Black)
                if (useMargin) {
                    val strokeWidth = 4f
                    withTransform({ this.inset(strokeWidth / 2f) }) {
                        drawRect(color = Color.White, style = Stroke(width = strokeWidth))
...
