...
        LazyColumn(
            contentPadding = PaddingValues(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = modifier
                .fillMaxSize()
                .testTag("ContentForm.PageContent")
        ) {
            item { Description(qrCodeType.descriptionId) }
            item { Title(showValidation, title, addInput) }
            items(qrCodeType.inputs) { input -> InputItem(input, addInput, showValidation) }
            item {
                ConfirmButton(
...
    @Composable
    fun Title(showValidation: Boolean, title: String, addInput: (InputId, InputData) -> Unit) {
        SingleItem(
            input = Input.Single(InputId.Title, R.string.title, title, KeyboardType.Text),
            showValidation = showValidation,
            addInput = addInput,
            modifier = Modifier.testTag("ContentForm.Title"),
        )
    }

    @Composable
    fun InputItem(
        input: Input,
...
            keyboardType = input.keyboardType,
            isMandatory = !input.isOptional,
            singleLine = input.singleLine,
            isError = showValidation && !data.isValid,
            modifier = modifier
                .fillMaxWidth()
                .testTag("ContentForm.SingleItem"),
        )
    }

    @Composable
    fun GroupItem(group: Input.Group, showValidation: Boolean, addInput: (InputId, InputData) -> Unit) {
        val title = stringResource(group.titleId)
...
                        is QrCodeType.MeCard -> MeCardContent.digest(inputMap)
                    }
                    addContent(content)
                } else
                    showSnackbar("Invalid Input")
            },
            modifier = Modifier.testTag("ContentForm.ConfirmButton"),
        ) {
            Text(text = "Confirm")
        }
    }
}

