...
    fun Page(viewModel: ContentTypeVM = mavericksViewModel(), navigateToContentForm: () -> Unit) {
        HandleEffects(viewModel.effect, navigateToContentForm)
        val state by viewModel.collectAsState()
        LazyVerticalGrid(
            columns = GridCells.Adaptive(250.dp),
            contentPadding = PaddingValues(8.dp),
            modifier = Modifier.testTag("QR-Code Types")
        ) {
            items(state.qrCodeTypes) {
                QrCodeTypeItem(
                    titleId = it.titleId,
                    onItemClicked = { viewModel.showContentForm(it) },
                    modifier = Modifier.padding(8.dp)
...
